// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders TimePoint 1`] = `
<div>
  <div
    class="time-point"
    title="Scheduled Time"
  >
    9:55 PM
  </div>
</div>
`;

exports[`renders TimePoint with skipped stop status 1`] = `
<div>
  <div
    class="time-point"
  >
    <div>
      <span
        class="badge bg-danger text-white"
        title="Skipped Stop"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-triangle-exclamation fa-fw"
          data-icon="triangle-exclamation"
          data-prefix="fas"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 0c14.7 0 28.2 8.1 35.2 21l216 400c6.7 12.4 6.4 27.4-.8 39.5S486.1 480 472 480L40 480c-14.1 0-27.2-7.4-34.4-19.5s-7.5-27.1-.8-39.5l216-400c7-12.9 20.5-21 35.2-21zm0 352a32 32 0 1 0 0 64 32 32 0 1 0 0-64zm0-192c-18.2 0-32.7 15.5-31.4 33.7l7.4 104c.9 12.5 11.4 22.3 23.9 22.3 12.6 0 23-9.7 23.9-22.3l7.4-104c1.3-18.2-13.1-33.7-31.4-33.7z"
            fill="currentColor"
          />
        </svg>
         Skipped
      </span>
    </div>
    <div
      class="small"
    >
      <strike
        class="text-muted"
        title="Scheduled Time"
      >
        9:55 PM
      </strike>
    </div>
  </div>
</div>
`;

exports[`renders TimePoint with trip update 1`] = `
<div>
  <div
    class="time-point"
  >
    <div>
      <strong
        class="text-dark"
        title="Updated Time"
      >
        9:59 PM
      </strong>
    </div>
    <div
      class="small"
    >
      <strike
        class="text-muted"
        title="Scheduled Time"
      >
        9:55 PM
      </strike>
    </div>
  </div>
</div>
`;
